# Automat_z_napojami

./: .gitignore  CMakeLists.txt  automat.cpp  automat.h  blik.cpp  blik.h  card.cpp  card.h  coin.cpp  coin.h  drink.cpp  drink.h  input.txt  payment.cpp  payment.h  result  test.cpp  throw  throws.cpp
headers/: automat.h  blik.h  card.h  coin.h  payment.h
